--- a/src/app/components/status-section/status-section.component.html
+++ b/src/app/components/status-section/status-section.component.html
@@ -18,6 +18,7 @@
             : ''
       }"
       class="p-5 mb-4 border rounded-lg"
+      aria-label="status field top"
     ></div>
     <div
       [style]="{
@@ -37,6 +38,7 @@
             : ''
       }"
       class="p-5 mb-4 boreder rounded-lg"
+      aria-label="status field center"
     ></div>
     <div
       [style]="{
@@ -56,6 +58,7 @@
             : ''
       }"
       class="p-5 border rounded-lg"
+      aria-label="status field bottom"
     ></div>
   </div>
 </section>
