--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div
     class="shadow-2xl bg-amber-500 p-4 m-auto text-3xl font-extrabold text-slate-100"
   >
-    <p class="w-[300px] m-auto text-center no-underline hover:italic">
+    <p class="w-[300px] m-auto text-center no-underline hover:italic" aria-label="title logo">
       {{ title }}
     </p>
   </div>
