--- a/src/app/components/input-section/input-section.component.html
+++ b/src/app/components/input-section/input-section.component.html
@@ -1,6 +1,7 @@
 <section>
   <div class="pt-5">
     <label
+      aria-label="Enter password"
       for="passwordCheck"
       class="block w-[300px] m-auto text-sm font-semibold leading-6 decoration-dotted text-amber-500"
       >Enter password</label
@@ -11,6 +12,7 @@
         type="text"
         name="password-check"
         id="passwordCheck"
+        aria-label="Password-check"
         autocomplete="givenpassword"
         class="block w-[300px] m-auto rounded-md border-0 px-3 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-offset-2 focus:ring-amber-500 sm:text-sm sm:leading-6"
       />
